fix attack layer z-index

--- a/src/components/Attack/styles.scss
+++ b/src/components/Attack/styles.scss
@@ -3,6 +3,9 @@
   flex-flow: row wrap;
   justify-content: space-between;
 
+  position: relative;
+  z-index: 2;
+
   width: var(--width-site);
   max-width: calc(100% - 3rem);
   margin: 0 auto;
